# pypackage-example

./: .gitignore  README.md  setup.cfg
src/imppkg/: data.json  hello.py
src/pypackage_example.egg-info/: PKG-INFO  SOURCES.txt
test/: hello_test.py
