[metadata]
name = pypackage-example
version = 0.0.1
url = https://github.com/annaic/pypackage-example
description = "This is an example of a pure python packaging"
long_description = file: README.md 
long_description_content_type = text/markdown
author = annaic
author_email = "Annotation AI" <annaic@example.com>
license = MIT
license_files = LICENSE 
classifiers = 
  License :: OSI Approved :: MIT License 


[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*

